[package]
name = "sirin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
actix-web = "4.0.1"
cached = "0.34.0"
futures = "0.3.21"
meilisearch-sdk = "0.16.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
tokio = "1.18.0"
